# asyncly

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  COPYRIGHT  Contributing.md  Doxyfile  LICENSE  Readme.md  WORKSPACE
.github/scripts/: run-bazel-prepare  run-bazel-prepare.cmd  run-bazel-test  run-bazel-test.cmd  run-cmake-prepare  run-cmake-prepare.cmd  run-cmake-test  run-cmake-test.cmd
.github/workflows/: continuous-integration-workflow.yml
Bazel/: BUILD.bazel  function2.BUILD  repositories.bzl
CMake/: AsynclyBuild.cmake  asyncly-config.cmake.in  test_headercompile.cpp.in
Docs/: Dockerfile  build_docs.sh  conf.py  doxyrest-config.lua  generate_docs.sh
Include/asyncly/: ExecutorTypes.h  Future.h  Observable.h  ProxyFactory.h  Wrap.h
Include/asyncly/detail/: TypeUtils.h
Include/asyncly/executor/: AsioExecutorController.h  CurrentExecutor.h  ExceptionShield.h  ExecutorStoppedException.h  ExternalEventExecutorController.h  IExecutor.h  IExecutorController.h  ISteadyClock.h  IStrand.h  InlineExecutor.h  MetricsWrapper.h  Strand.h  ThreadPoolExecutorController.h
Include/asyncly/executor/detail/: AsioExecutor.h  ExecutorMetrics.h  ExternalEventExecutor.h  ThreadPoolExecutor.h
Include/asyncly/future/: AddTimeout.h  BlockingWait.h  Future.h  Futurize.h  LazyOneTimeInitializer.h  LazyValue.h  Split.h  WhenAll.h  WhenAny.h  WhenThen.h
Include/asyncly/future/detail/: Coroutine.h  CoroutineImpl.h  Future.h  FutureImpl.h  FutureTraits.h  WhenAll.h  WhenAny.h
Include/asyncly/observable/: Observable.h  Subscriber.h  Subscription.h
Include/asyncly/observable/detail/: ObservableImpl.h  SharedSubscriptionContext.h  Subscription.h
Include/asyncly/scheduler/: AsioScheduler.h  DefaultScheduler.h  IRunnableScheduler.h  IScheduler.h  PriorityQueue.h  SchedulerThread.h
Include/asyncly/scheduler/detail/: AsioTimerHandler.h  AsioTimerTask.h  BaseScheduler.h  Sleep.h
Include/asyncly/task/: AutoCancelable.h  Cancelable.h  CancelableTask.h  CopyableTask.h  RepeatableTask.h  Task.h
Include/asyncly/task/detail/: PeriodicTask.h  TaskCancelable.h  TaskConcept.h  TaskCurrentExecutorGuard.h  TaskWrapper.h
Source/executor/: AsioExecutorController.cpp  CurrentExecutor.cpp  ExceptionShield.cpp  ExternalEventExecutorController.cpp  InlineExecutor.cpp  MetricsWrapper.cpp  Strand.cpp  ThreadPoolExecutorController.cpp
Source/executor/detail/: AsioExecutor.cpp  ExecutorMetrics.cpp  ExecutorMetrics.h  ExternalEventExecutor.cpp  MetricsTask.cpp  MetricsTask.h  MetricsTaskState.cpp  MetricsTaskState.h  StrandImpl.cpp  StrandImpl.h  ThreadPoolExecutor.cpp
Source/task/detail/: PeriodicTask.cpp  TaskCurrentExecutorGuard.cpp
Test/: CMakeLists.txt
Test/Header/: CMakeLists.txt
Test/Mocks/: BUILD.bazel  CMakeLists.txt  dummy.cpp
Test/Mocks/asyncly/: MockCancelable.h  MockIExecutor.h  MockIStrand.h
Test/Performance/: BUILD.bazel  CMakeLists.txt
Test/Performance/Executor/: ExecutorBenchmarksMain.cpp  ExecutorWrappersPerformance.cpp  ThreadPoolPerformanceTest.cpp
Test/Unit/: BUILD.bazel  BaseSchedulerTest.cpp  CMakeLists.txt  ExceptionShieldTest.cpp  ExecutorCommonTest.cpp  ExecutorThreadPoolTest.cpp  InterfaceForExecutorTest.h  MetricsWrapperTest.cpp  PeriodicTaskTest.cpp  ProxyAssertionsTest.cpp  StrandImplTestFactory.h  StrandTest.cpp  ThreadPoolExecutorTest.cpp  WrapTest.cpp  tests_main.cpp
Test/Unit/detail/: PrometheusTestHelper.cpp  PrometheusTestHelper.h  ThrowingExecutor.h
Test/Unit/future/: AddTimeoutTest.cpp  AsyncTest.cpp  BlockingWait.cpp  CoroutineTest.cpp  FutureTest.cpp  LazyOneTimeInitializerTest.cpp  LazyValueTest.cpp  SplitTest.cpp  WhenAllTest.cpp  WhenAnyTest.cpp  WhenThenTest.cpp
Test/Unit/observable/: IObservableInterface.h  ObservableTest.cpp
Test/Unit/task/: AutoCancellableTest.cpp
Test/Utils/: BUILD.bazel  CMakeLists.txt
Test/Utils/Include/asyncly/test/: ConvertExecutorFutureToStdFuture.h  CurrentExecutorGuard.h  ExecutorInterfaceTest.h  ExecutorTestFactories.h  FakeClockScheduler.h  FakeExecutor.h  FakeFutureTest.h  FutureTest.h  IFakeExecutor.h  LazyValue.h  PostAndWait.h  SchedulerProvider.h  TimeoutGuardEnvironment.h  WaitForFuture.h  WindowsTimerResolution.h
Test/Utils/Source/: TimeoutGuard.cpp  TimeoutGuard.h  TimeoutGuardEnvironment.cpp  WindowsTimerResolution.cpp
