cc_test(
    name = "test_asyncly",
    size = "medium",
    srcs = glob(
        [
            "**/*.cpp",
            "**/*.h",
        ],
    ),
    includes = [
        ".",
    ],
    deps = [
        "//:asyncly",
        "//Test/Mocks:asyncly_mocks",
        "//Test/Utils:asyncly_test_utils",
        "@com_google_googletest//:gtest_main",
    ],
)
